Fixed email address.

--- a/WGP/fsharp-generics.tex
+++ b/WGP/fsharp-generics.tex
@@ -64,7 +64,7 @@
            {e.rodriguez@students.uu.nl}
 \authorinfo{Wouter Swierstra}
            {Utrecht University}
-           {W.S.Swierstra@uu.nl}
+           {w.s.swierstra@uu.nl}
 
 \maketitle
 
